add chat component text/image/video

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <resources>
     <color name="bootsplash_background">#1B1212</color>
-     <color name="white">#FFF</color>
+   <color name="colorAccent">#fff</color>
 </resources>
